--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx eleventy --serve"
+    "start": "rm -rf _site && npx eleventy --serve --port=80"
   },
   "keywords": [],
   "author": "",
