--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,7 @@
 [build]
-  publish = "_site"
-  command = "DEBUG=* eleventy"
+publish = "_site"
+command = "DEBUG=* eleventy"
+
+[[redirects]]
+from = "/wp-content/uploads/SA_Meetings/MeetingsSA.pdf"
+to = "/meetings/"
