--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "rm -rf _site && npx eleventy --serve --port=80"
+    "start": "rm -rf _site && npx @11ty/eleventy --serve --quiet --port=3000",
+    "debug": "rm -rf _site && DEBUG=Eleventy* npx @11ty/eleventy --serve --port=3000"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "^0.10.0"
+    "@11ty/eleventy": "^0.11.0"
   }
 }
