--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "_site"
-command = "DEBUG=* eleventy"
+command = "eleventy"
 
 [[redirects]]
 from = "/wp-content/uploads/SA_Meetings/MeetingsSA.pdf"
