--- a/.pages.yml
+++ b/.pages.yml
@@ -54,6 +54,7 @@ content:
           - name: link_url
             label: Link URL
             type: string
+            pattern: ^(https?:\/\/)?(www\.)?[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}(\/[^\s]*)?$
           - name: link_text
             label: Link Text
             type: string
